2004-11-29 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.h, src/stimuli.cc, src/value.cc, src/value.h: Redesigned
	the 'asynchronous_stimulus' to be a 'ValueStimulus'.
	Added a new stimulus type: AttributeStimulus. An attribute stimulus
	is a stimulus that can be tied directly to some attribute. For example,
	a register symbol is a type of attribute. So an attribute stimulus
	can be tied to a register symbol to create a 'register stimulus'.
	* cli/cmd_stimulus.cc, cli/command.cc, cli/parse.yy: Added support
	for attribute stimuli.


2004-11-28 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.def: MSVC sync

2004-11-24 Scott Dattalo <scott@dattalo.com>
	* src/processor.cc: operator[] for FileContext was not checking
	negative indices.

2004-11-24 Scott Dattalo <scott@dattalo.com>
	* cli/input.cc: yet another attempt to fix tab completion.
	* modules/binary_indicator.cc, modules/binary_indicator.h
	modules/bitlog.h, modules/led.h, modules/logic.cc, modules/logic.h,
	modules/paraface.h, modules/resistor.cc, modules/video.cc,
	modules/video.h: Changed IO_input to IOPIN for all pins. This
	is an attempt to remove a warning message regarding IO_input that
	is generated while building under CygWin.
	* modules/makefile.mingw, plat/win32/gpsim.nsi: Renamed modules.dll
	to a slightly more descriptive gpsim_modules.dll 
	* src/i2c-ee.cc, src/p12.cc, src/p16f62x.cc, src/p17c75x.cc, 
	src/stimuli.h: exchanged references to IO_input to IOPIN.

2004-11-23 Scott Dattalo <scott@dattalo.com>
	* plat/win32/gpsim.def, modules/modules.vcproj: MSVC sync
	* modules/*.cc: removed (char *) casts in calls to new_name()
	* gpsim/main.cc: removed some unnecessary includes.
	* gpsim/gpsim.vcproj: MSVC sync
	* cli/input.cc: removed some debug stuff
	* cli/cmd_log.cc: removed unreferenced variable.

2004-11-23 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.def, modules/modules.vcproj: MSVC sync

2004-11-23 Scott Dattalo <scott@dattalo.com>