@@ -27,6 +27,8 @@ ${RT} p16f84 p16f84
 
 ${RT} digital_stim digital_stim
 
+${RT} register_stim register_stim
+
 ${RT} p12ce518 p12ce518
 
 ${RT} interrupts_14bit interrupts_14bit
